--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -1,6 +1,7 @@
-$oscuro: #28282B;
-$madera: #815730;
+$oscuro: #1e1e20;
+$madera: #724d2b;
 $claraMadera:  #c38f5f;
-$oscuraMadera:  #5e4024;
-$blanco: #d7e1d7;
+$oscuraMadera:  #3b2713;
+$superOscuraMadera: #2b1c0e;
+$blanco: #F5F5F5;
 $gris: darkgray;
