--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -3,8 +3,13 @@
     padding: 0;
     box-sizing: border-box;
 }
+body{
+    overflow: hidden;
+    font-family: "Work Sans", sans-serif;
+    font-weight: 300;
+}
 main{
-    background-color: $blanco;
+    background-color: $madera;
     min-height: 800px;
     width: 100%;
 }
